Fix mobile alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 5rem;
+  font-size: 4rem;
   color: white;
   margin: 0;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
